# aoc_5

./: .gitignore  CMakeLists.txt  Makefile
include/: boarding.h
src/: main.cpp
tests/: CMakeLists.txt  tests.cpp
